--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,7 @@
-san_platform:
-    resource: "@SanPlatformBundle/Resources/config/routing.yml"
+san_core:
+    resource: "@SanCoreBundle/Resources/config/routing.yml"
     prefix:   /
 
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+san_platform:
+    resource: "@SanPlatformBundle/Resources/config/routing.yml"
+    prefix:   /platform
